--- a/FastFoodApp/styles/stylesQuienesSomos.css
+++ b/FastFoodApp/styles/stylesQuienesSomos.css
@@ -11,90 +11,22 @@ body{
     background-color: #0F0F0F;
 }
 
-/*Estilos del encabezado de la página*/
-header{
-    width: 100%;
-    height: 265px;
-    background: #000000;
-    overflow: hidden;
-    transition: all 0.5 ease;
+/* Quienes Somos specific styles */
+header {
+	background-image: url('../images/quienesSomos/img1.jpg');
 }
 
-/*Estilos del logo de la página*/
-.logo{
-    display:block;
-    margin:auto;
-    width: 40%;
+h1 {
+	color: #EE9B14;
+	font-family: 'Satisfy', cursive;
+	font-size: 80px;
+	text-align: center;
+	margin-top: 120px;
+	margin-bottom: 80px;
 }
 
-/*Estilos del menú de navegación de la página*/
-.menu_list{
-    text-align: center;
-    width: 100%;
-    position: absolute;
-    transition: ease-in 1s;
-    background: #000000;
-}
-
-.menu_fixed{
-    position: fixed;
-    width: 100%;
-    margin-top: 0px;
-    z-index: 1000;
-    background-color: #000000;
-    top: 0;
-}
-
-.list_item{
-    display: inline-block;
-    list-style: none;
-    padding: 20px 5px;
-}
-
-.link{
-    text-decoration: none;
-    color: white;
-    padding: 1rem 1rem;
-    position: relative;
-}
-
-/*Efecto de la línea inferior del menu de navegación*/
-.link:after{
-    content: "";
-    width: 0;
-    height: 4px;
-    background-color: #fca311;
-    position: absolute;
-    bottom: 0;
-    right: 50%;
-    transition: all .5s;
-    will-change: width;
-}
-
-.link:hover:after{
-    width: 100%;
-    right: 0;
-    cursor: pointer;
-}
-
-.redes-encabezado{
-    position: absolute;
-    right: 20px;
-    top: 70px;
-}
-
-.redes-encabezado a i{
-    color: #fca311;
-    list-style: none;
-    font-size: 1.5rem;
-    margin-bottom: 20px;
-}
-
-a[href="https://www.facebook.com"],i[class="fa fa-facebook"]:hover{
-    color: #3b5998;
-}
-
-a[href="https://www.instagram.com"],i[class="fa fa-instagram"]:hover{
+/*Estilos del footer*/
+footer{
     color: #d628b0;
 }
 
