--- a/FastFoodApp/styles/stylesMenu.css
+++ b/FastFoodApp/styles/stylesMenu.css
@@ -76,7 +76,7 @@ footer{
     background: #080f1b;
     height: auto;
     padding-top: 40px;
-    color: #fff;
+    color: #f5f2f2;
 }
 
 .footer-content{
